--- a/webconThema/prueba.html
+++ b/webconThema/prueba.html
@@ -9,6 +9,9 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
+    <link rel="icon" type="image/x-icon" href="../imagenes/ico.png">
+
+
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="../bootstrap4/css/bootstrap.min.css">
     <link rel="stylesheet" href="estilo.css">
