se quitan archivos que no se utilizan

--- a/index.html
+++ b/index.html
@@ -445,10 +445,10 @@
     -->
     
     
-    <div class="container d-none d-xl-block">
+    <div class="container ">
         <div class="row">
             <div class="col-12">
-                <div class="swiper-container1">
+                <div class="swiper-container1" style="overflow: scroll;">
                     <div class="swiper-wrapper">
                         <div class="swiper-slide swiper-modpablo" >
                             <div class="col-12 ">
